--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
   flutter_barcode_scanner: ^2.0.0
+
+  provider: ^6.1.4
+
 
 dev_dependencies:
   flutter_test:
