--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,23 +15,19 @@ dependencies:
   http: ^1.1.0
   cached_network_image: ^3.3.0
   shared_preferences: ^2.2.0
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
-  flutter_barcode_scanner: ^2.0.0
-
+  mobile_scanner: ^3.5.6
   provider: ^6.1.4
-
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
-
   assets:
     - assets/images/
+  generate: true
