--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,6 @@
 name: sales_tracking
-
 description: "A new Flutter project."
-
 publish_to: 'none'
-
 version: 1.0.0+1
 
 environment:
@@ -20,6 +17,7 @@ dependencies:
   provider: ^6.1.4
   flutter_localizations:
     sdk: flutter
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -31,3 +29,11 @@ flutter:
   assets:
     - assets/images/
   generate: true
+
+flutter_intl:
+  enabled: true
+  arb_dir: lib/l10n
+  output_dir: lib/l10n/generated
+  template_arb_file: app_en.arb
+  output_localization_file: app_localizations.dart
+  nullable_getter: false
