--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.1.0
+  permission_handler: ^11.3.1
   cached_network_image: ^3.3.0
   shared_preferences: ^2.2.0
   cupertino_icons: ^1.0.8
