--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ flutter:
   generate: true
 
 flutter_intl:
-  enabled: true
+  enabled: trueflutter gen-l10n
   arb_dir: lib/l10n
   output_dir: lib/l10n/generated
   template_arb_file: app_en.arb
