--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,20 @@ dependencies:
     sdk: flutter
   intl: ^0.19.0
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/icon.png"
+  adaptive_icon_background: "#ffffff"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   build_runner: ^2.4.6
   hive_generator: ^2.0.1
+  flutter_launcher_icons: ^0.13.1
+
 
 
 flutter:
